# lzq-admin/domain/model/extrastruct/sys_config_extra.go
@@ -1,7 +1,5 @@
 package extrastruct
 
-import "lzq-admin/domain/model"
-
 /**
  * @Author  糊涂的老知青
  * @Date    2022/4/5
@@ -12,16 +10,11 @@ type ExtraConfigObject struct {
 	ExtraQiNiuConfig
 }
 
-type QiNiuConfigDto struct {
-	Id string `json:"id" lab:"ID"` //ID
-	model.SystemConfigBase
-	ExtraQiNiuConfig
-}
-
 type ExtraQiNiuConfig struct {
-	AccessKey string `json:"accessKey" lab:"公钥"` //公钥
-	SecretKey string `json:"secretKey" lab:"私钥"` //私钥
-	Bucket    string `json:"bucket" lab:"空间名称"`  //空间名称
-	Area      string `json:"area" lab:"存储区域"`    //存储区域
-	BaseUrl   string `json:"baseUrl" lab:"域名"`   //域名
+	AccessKey string `json:"accessKey" lab:"公钥"`  //公钥
+	SecretKey string `json:"secretKey" lab:"私钥"`  //私钥
+	Bucket    string `json:"bucket" lab:"空间名称"`   //空间名称
+	Area      string `json:"area" lab:"存储区域"`     //存储区域
+	BaseUrl   string `json:"baseUrl" lab:"域名"`    //域名
+	Directory string `json:"directory" lab:"主目录"` //主目录
 }
